--- a/.github/workflows/docker_test.yml
+++ b/.github/workflows/docker_test.yml
@@ -16,41 +16,54 @@ env:
 jobs:
   test-docker:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     name: Test docker images
     steps:
-      - uses: actions/checkout@v4
-      - name: Build image
-        run: |
-          docker build -t langflowai/langflow:latest-dev \
-            -f docker/build_and_push.Dockerfile \
-            .
-      - name: Test image
-        run: |
-          expected_version=$(cat pyproject.toml | grep version | head -n 1 | cut -d '"' -f 2)
-          version=$(docker run --rm --entrypoint bash langflowai/langflow:latest-dev -c 'python -c "from langflow.version.version import get_version; print(get_version())"')
-          if [ "$expected_version" != "$version" ]; then
-              echo "Expected version: $expected_version"
-              echo "Actual version: $version"
-              exit 1
-          fi
-
-      - name: Build backend image
-        run: |
-          docker build -t langflowai/langflow-backend:latest-dev \
-            --build-arg LANGFLOW_IMAGE=langflowai/langflow:latest-dev \
-            -f docker/build_and_push_backend.Dockerfile \
-            .
-      - name: Test backend image
-        run: |
-          expected_version=$(cat pyproject.toml | grep version | head -n 1 | cut -d '"' -f 2)
-          version=$(docker run --rm --entrypoint bash langflowai/langflow-backend:latest-dev -c 'python -c "from langflow.version.version import get_version; print(get_version())"')
-          if [ "$expected_version" != "$version" ]; then
-              echo "Expected version: $expected_version"
-              echo "Actual version: $version"
-              exit 1
-          fi
-      - name: Build frontend image
-        run: |
-          docker build -t langflowai/langflow-frontend:latest-dev \
-            -f docker/frontend/build_and_push_frontend.Dockerfile \
-            .
+      - name: Login to Github Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push (latest-dev) image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          file: docker/build_and_push.Dockerfile
+          tags: OPHoperHPO/langflow:latest-dev
+          # provenance: false will result in a single manifest for all platforms which makes the image pullable from arm64 machines via the emulation (e.g. Apple Silicon machines)
+          provenance: false
+      - name: Build and push (latest-dev) image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          file: docker/build_and_push.Dockerfile
+          tags: OPHoperHPO/langflow:latest-dev
+          # provenance: false will result in a single manifest for all platforms which makes the image pullable from arm64 machines via the emulation (e.g. Apple Silicon machines)
+          provenance: false
+      - name: Build and push (latest-dev-backend) image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          file: docker/build_and_push_backend.Dockerfile
+          tags: OPHoperHPO/langflow:latest-dev-backend
+          # provenance: false will result in a single manifest for all platforms which makes the image pullable from arm64 machines via the emulation (e.g. Apple Silicon machines)
+          provenance: false
+          build-args: 
+            - LANGFLOW_IMAGE=OPHoperHPO/langflow:latest-dev
+      - name: Build and push (latest-dev-frontend) image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          file: docker/build_and_push_frontend.Dockerfile
+          tags: OPHoperHPO/langflow:latest-dev-frontend
+          # provenance: false will result in a single manifest for all platforms which makes the image pullable from arm64 machines via the emulation (e.g. Apple Silicon machines)
+          provenance: false
+          build-args: 
+            - LANGFLOW_IMAGE=OPHoperHPO/langflow:latest-dev
+  
