--- a/docker_example/Dockerfile
+++ b/docker_example/Dockerfile
@@ -1,3 +1,3 @@
-FROM langflowai/langflow:latest
+FROM ghcr.io/ophoperhpo/langflow:latest-dev
 
 CMD ["python", "-m", "langflow", "run", "--host", "0.0.0.0", "--port", "7860"]
